--- a/counseling/app/views/layouts/application.html.erb
+++ b/counseling/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <nav class="py-2 bg-body-tertiary border-bottom">
       <div class="container d-flex flex-wrap">
         <ul class="nav me-auto">
-          <%= nav_link 'Home', root_path %> <%= nav_link 'About', about_path %> <%= nav_link 'Books', books_path %>
+          <%= nav_link 'Home', root_path %> <%= nav_link 'About', about_path %> <%= nav_link 'Books', books_path %> <%= nav_link 'Counselors', counselors_path %> 
         </ul>
         <ul class="nav">
           <div class="btn-group" role="group" aria-label="Basic example">
