--- a/counseling/app/views/counselors/show.html.erb
+++ b/counseling/app/views/counselors/show.html.erb
@@ -1,7 +1,10 @@
-<%= title="Counselor" %>
-<div class="row">
-    <div class="col-md-6">
-        <%= link_to "Edit" , edit_counselor_path(@counselor) %> | <%= link_to "All Counselors" , counselors %>
-            <%= button_to "Delete", @counselor, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-danger" %>
-    </div>
-        
+<div class="container">
+    <%= title="Counselor" %>
+        <%= render @counselor %>
+            <div class="container">
+                <%= link_to "Edit" , edit_counselor_path(@counselor) %> | <%= link_to "All Counselors" , counselors_path
+                        %>
+                        <%= button_to "Delete" , @counselor, method: :delete, data: { turbo_confirm: "Are you sure?" },
+                            class: "btn btn-danger" %>
+            </div>
+</div>
