Add header image

--- a/counseling/app/assets/stylesheets/application.bootstrap.scss
+++ b/counseling/app/assets/stylesheets/application.bootstrap.scss
@@ -331,3 +331,7 @@ a {
     padding: 0;
   }
 }
+
+.header_image{
+  background-image: url("/Users/weicheng/Desktop/final-project-CHAOLIN99/counseling/app/assets/images/header.jpg");
+}
