--- a/counseling/app/views/sites/about.html.erb
+++ b/counseling/app/views/sites/about.html.erb
@@ -1,2 +1,29 @@
 <% title "About Us" %>
-<div class="about"></div>
+    <div class="about">
+        <p>
+            The counseling application is designed as an innovative platform to support individuals seeking mental
+            health assistance. By integrating user-friendly features and a streamlined interface, the app facilitates
+            seamless scheduling and communication with professional counselors. Users can easily access personalized
+            counseling sessions and helpful resources from the comfort of their own space, empowering them to engage in
+            mental health care without traditional barriers. The application also incorporates secure, real-time
+            messaging and video call capabilities, ensuring that users can maintain confidential and meaningful
+            interactions with their chosen counselor.</p>
+
+        <br>
+        <p>The motivation behind this counseling app is rooted in addressing the global need for more accessible mental
+            health services. Many individuals face challenges in obtaining timely support due to factors like location,
+            stigma, or availability of professionals. This app aims to bridge that gap by offering a flexible and
+            user-centric platform that respects the diverse needs of users. By removing obstacles to access, the
+            platform encourages more people to seek guidance and professional assistance, fostering better mental health
+            outcomes and enhancing overall well-being.</p>
+        <br>
+        <p>
+            Users of the counseling application will gain several benefits. The app's personalized approach means that
+            individuals can tailor their experiences to meet specific mental health goals. With features like progress
+            tracking and insights provided by licensed counselors, users can observe their development over time,
+            gaining deeper self-awareness and resilience. Additionally, by leveraging digital tools, the app allows
+            users to stay connected with their mental health journey anytime, anywhere. This constant availability of
+            resources and professional guidance empowers individuals to take proactive steps toward maintaining mental
+            wellness, ultimately promoting a healthier and more balanced lifestyle.
+        </p>
+    </div>
