--- a/counseling/app/views/counselors/_form.html.erb
+++ b/counseling/app/views/counselors/_form.html.erb
@@ -1,10 +1,12 @@
-<div class="container">
-    <%= bootstrap_form_with model: @counselor do |f| %>
-        <%= f.text_field :first_name, label: "First Name" %>
-            <%= f.text_field :last_name, label: "Last Name" %>
-                <%= f.text_field :specialization, label: "Specialization" %>
-                    <%= f.text_field :email, label: "Email" %>
-                        <%= f.text_field :phone, label: "Phone" %>
-                            <%= f.primary @counselor.persisted? ? 'Update Counselor' : 'Create Counselor' %>
-                                <% end %>
-</div>
+<%= bootstrap_form_with model: @counselor do |f| %>
+    <form class="row g-3">
+        <div class="col-md-6">
+            <%= f.text_field :first_name, label: "First Name" %>
+                <%= f.text_field :last_name, label: "Last Name" %>
+                    <%= f.text_field :specialization, label: "Specialization" %>
+                        <%= f.text_field :email, label: "Email" %>
+                            <%= f.text_field :phone, label: "Phone" %>
+                                <%= f.primary @counselor.persisted? ? 'Update Counselor' : 'Create Counselor' %>
+        </div>
+    </form>
+    <% end %>
